<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">
    <ImageButton
        android:id="@+id/back"
        android:contentDescription="@string/app_name"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        app:srcCompat="@drawable/ic_chevron_left_white_24dp"
        android:background="@null"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        android:layout_marginTop="75dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAffin"
        android:textSize="30sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="15dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_email_white_24dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/resetEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:hint="@string/email"
                android:textColor="@color/colorAffin"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/button_reset"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_live"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:text="@string/reset"
        android:textColor="@color/colorAffin"/>
</LinearLayout>