<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="SplashActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:clickable="false"
            android:background="@drawable/splash"
            android:scrollbars="none"
            android:scaleType="fitCenter"
            android:fitsSystemWindows="true"
            android:foregroundGravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_margin="25dp"
            android:textSize="30sp"
            android:textColor="@color/colorAffin"
            android:text="@string/app_name"/>
    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <Button
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/login"
                android:textColor="@color/colorAffin"
                android:background="@color/colorPrimary"
                />
            <Button
                android:id="@+id/button_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/colorAffin"
                android:background="@color/colorPrimary"

                android:text="@string/signup"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
