<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/back"
            android:contentDescription="@string/app_name"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/ic_chevron_left_white_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"/>
        <TextView
            android:id="@+id/tv_signup"
            android:layout_margin="33dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorAffin"
            android:textSize="18sp"/>
        <View
            android:layout_width="4dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/colorAffin"/>
        <TextView
            android:id="@+id/tv_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAffin"
            android:textSize="30sp"/>
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
           android:layout_centerVertical="true">
            <LinearLayout
                android:layout_marginTop="120dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="1">
                <Button
                    android:id="@+id/buttonGoogle"
                    android:layout_margin="18dp"
                    android:layout_width="0dp"
                    android:inputType="textCapWords"
                    android:backgroundTint="@android:color/white"
                    android:text="@string/google"
                    android:textColor="@color/grey"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:layout_height="42dp"
                    android:layout_weight="0.5"/>
                <Button
                    android:id="@+id/buttonFacebook"
                    android:layout_margin="18dp"
                    android:layout_width="0dp"
                    android:inputType="textCapWords"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/facebook"
                    android:textColor="@color/colorAffin"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:layout_height="42dp"
                    android:layout_weight="0.5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">
                <View
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/colorAffin"
                    android:layout_weight="0.4"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/or"
                    android:textColor="@color/colorAffin"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textAlignment="center" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorAffin"
                    android:layout_weight="0.4"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginEnd="18dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="15dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/ic_email_white_24dp"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:paddingRight="0dp"
                        app:hintAnimationEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/loginEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textWebEmailAddress"
                            android:maxLines="1"
                            android:hint="@string/email"
                            android:textColor="@color/colorAffin"
                            android:textSize="16sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginEnd="18dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="15dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/ic_lock_white_24dp"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:paddingRight="0dp"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorAffin"
                        app:hintAnimationEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/loginPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textWebPassword"
                            android:maxLines="1"
                            android:hint="@string/password"
                            android:textColor="@color/colorAffin"
                            android:textSize="16sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/button_login"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_live"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/colorAffin"/>
                <TextView
                    android:id="@+id/forgotpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:text="@string/forgotpassword"
                    android:textSize="16sp"
                    android:textColor="@color/colorAffin"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
